visit https://hackmd.io/5Tg4rqrBQSaoW38Ru8oBFA?view for more info

===gradle_4.1=== 8/8 25pm
-finished snake[2/avocado/?] (potential bugs)
-bug fix: audio in problems not behaving correctly
-bug fix: team 3 no longer has privilege on startup
-mine now takes 100 points instead of 50
-bug fix: 校園禮儀[2/nehs/2] answer mismatch
-modified 過去發生的都叫歷史[1/socio/4]
-modified 不會的猜C[1/physmath/5]


===gradle_4.0=== 8/8 17pm
-new feature: audio support for problems, "audio" and "audiostop" widgets
-new feature: custom fonts for problems, property "font"
-added 校園禮儀[2/nehs/2]
-added 風紀股長阿瓜[2/nehs/3]
-added 迷路的酋長[2/nehs/4]
-added 大怒神[2/nehs/5]
-added 傲慢與偏見[2/nehs/6]
-added 阿蛇的酒吧[2/nehs2/1]
-modified 夕陽產業[1/chembio/1_2]
-modified 餐桌上的生物[1/chembio/2_1]
-modified 骨折嘉年華[1/chembio/5]
-modified 龍眼[1/chembio/4_1]
-modified S^5[1/physmath/3]
-modified Vocabulary 101[1/lit/5]
-modified Be Humble[1/lit/6]


===gradle_3.2=== 8/7 25pm
-temporary feature: default problem set: #2
-added 抽筋大作戰[2/nehs/1]
-added snake[2/avocado/?] (WIP)
-added 左腳拖鞋[2/avocado/?] (WIP)


===gradle_3.1=== 8/7 21pm
-new feature: manually manipulate scores
-new feature: manually activate/deactivate problems
-bug fix: 鐵梨與鯊魚[1/socio/1] problem statement



===gradle_3.0=== 8/7 16pm
-added problem set 2
-updated settings
-removed add button on title screen
-bug fix: 胡桃仙子的小祕密[1/chembio/3] overlapping layout
-bug fix: 骨折嘉年華[1/chembio/5] overlapping layout
-bug fix: F^7[1/physmath/2_1] overlapping layout
-bug fix: 過去發生的都叫歷史[1/socio/4] overlapping layout
-removed 史萊姆遺傳學[1/chembio/1_1]; added 夕陽產業[1/chembio/1_2]
-removed 牙齦狂想曲[1/chembio/4]; added 龍眼[1/chembio/4_1]
-removed 新詩共賞(1)[1/lit/1]; added 尋找威利[1/lit/1_1]
-removed 方程式與環保塑膠[1/physmath/4]; added 羅伯特瘋狂大冒險[1/physmath/4_1]
-renamed 新詩共賞(2)[1/lit/2] to 新詩共賞
-renamed 不會的猜C[1/chembio/2_1] to 餐桌上的生物
-renamed 樹脂-8[1/physmath/5] to 不會的猜C
-reworked scoring scheme: 150, 150, 250, 250, 400, 600




===gradle_2.2===
-new feature: scrolling font size
-title now shows version

