@@ -1,0 +1,4 @@
+package com.fieryslug.reinforcedcoral.minigame.minesweeper;
+
+public class PanelMineSweeper {
+}
