@@ -1,0 +1,20 @@
+package com.fieryslug.reinforcedcoral.minigame.minesweeper;
+
+import com.fieryslug.reinforcedcoral.core.Problem;
+import com.fieryslug.reinforcedcoral.panel.PanelGame;
+
+public class ProblemMineSweeper extends Problem {
+
+    public ProblemMineSweeper(String name) {
+        super(name, 0);
+
+    }
+
+    @Override
+    public boolean onClick(PanelGame panelGame) {
+
+
+        return true;
+    }
+}
+
