@@ -1,5 +1,7 @@
 package com.fieryslug.reinforcedcoral.minigame.snake;
 
+import java.awt.Color;
+
 public class FruitGenerator {
 
     public int points;
@@ -13,11 +15,14 @@ public class FruitGenerator {
     private int boundX = 50;
     private int boundY = 20;
 
-    public FruitGenerator(int points, int fruitWorth, int coolDown, int id) {
+    public Color color;
+
+    public FruitGenerator(int points, int fruitWorth, int coolDown, int id, Color color) {
         this.points = points;
         this.fruitWorth = fruitWorth;
         this.coolDown = coolDown;
         this.id = id;
+        this.color = color;
 
         this.countDown = coolDown;
     }
